--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ htmlcov/
 # Environment files
 .env
 .env.*
+!.env.example
 
 # IDE / Editor
 .vscode/
@@ -36,9 +37,6 @@ htmlcov/
 
 # Logs
 *.log
-
-# Vercel
-.vercel/
 
 # Local uploaded/output assets (optional)
 *.png
