--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,66 @@
 services:
-  app:
+  web:
     build: .
+    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
     ports:
       - "8000:8000"
+    environment:
+      REDIS_URL: ${REDIS_URL}
+      S3_ENDPOINT_URL: ${S3_ENDPOINT_URL}
+      S3_PUBLIC_ENDPOINT_URL: ${S3_PUBLIC_ENDPOINT_URL}
+      S3_REGION: ${S3_REGION}
+      S3_ACCESS_KEY: ${S3_ACCESS_KEY}
+      S3_SECRET_KEY: ${S3_SECRET_KEY}
+      S3_BUCKET: ${S3_BUCKET}
+      S3_SECURE: ${S3_SECURE}
+      S3_ADDRESSING_STYLE: ${S3_ADDRESSING_STYLE}
+      SIGNED_URL_TTL_SECONDS: ${SIGNED_URL_TTL_SECONDS}
+    volumes:
+      - .:/app
+    depends_on:
+      - redis
+      - minio
     restart: unless-stopped
+
+  worker:
+    build: .
+    command: python worker.py
+    environment:
+      REDIS_URL: ${REDIS_URL}
+      S3_ENDPOINT_URL: ${S3_ENDPOINT_URL}
+      S3_PUBLIC_ENDPOINT_URL: ${S3_PUBLIC_ENDPOINT_URL}
+      S3_REGION: ${S3_REGION}
+      S3_ACCESS_KEY: ${S3_ACCESS_KEY}
+      S3_SECRET_KEY: ${S3_SECRET_KEY}
+      S3_BUCKET: ${S3_BUCKET}
+      S3_SECURE: ${S3_SECURE}
+      S3_ADDRESSING_STYLE: ${S3_ADDRESSING_STYLE}
+      SIGNED_URL_TTL_SECONDS: ${SIGNED_URL_TTL_SECONDS}
+    volumes:
+      - .:/app
+    depends_on:
+      - redis
+      - minio
+    restart: unless-stopped
+
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
+
+  minio:
+    image: minio/minio:latest
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio-data:/data
+    restart: unless-stopped
+
+volumes:
+  minio-data:
