feat: add image validation, metrics tracking, and job management enhancements
- Implemented image validation to ensure uploaded files are valid images and within size limits.
- Added metrics tracking for job submissions, cancellations, and downloads.
- Enhanced job management with the ability to cancel jobs and list failed jobs.
- Introduced cleanup jobs to remove expired outputs from storage.
- Updated API endpoints to support new functionalities, including metrics and job cancellation.
- Improved error handling and logging throughout the application.
- Added progress tracking for image processing jobs, with feedback to the client.
- Refactored middleware for better request context management and rate limiting.
- Updated frontend to display progress bars for single and batch processing.
- Added CI workflow for automated testing on push and pull requests.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-# Docker Compose runtime config
+# Core
 REDIS_URL=redis://redis:6379/0
+
+# S3/MinIO
 S3_ENDPOINT_URL=http://minio:9000
 S3_PUBLIC_ENDPOINT_URL=http://127.0.0.1:9000
 S3_REGION=us-east-1
@@ -10,6 +12,23 @@ S3_SECURE=false
 S3_ADDRESSING_STYLE=path
 SIGNED_URL_TTL_SECONDS=3600
 
-# MinIO root user (for console/admin)
+# MinIO admin
 MINIO_ROOT_USER=change-me-minio-user
 MINIO_ROOT_PASSWORD=change-me-minio-password
+
+# Limits
+MAX_IMAGE_BYTES=12582912
+MAX_BATCH_FILES=15
+MAX_IMAGE_PIXELS=20000000
+RATE_LIMIT_PER_MINUTE=45
+
+# Job/Retry
+JOB_RESULT_TTL_SECONDS=86400
+JOB_FAILURE_TTL_SECONDS=86400
+JOB_RETRY_MAX=2
+JOB_RETRY_INTERVALS=5,20
+
+# Cleanup
+CLEANUP_ENABLED=true
+CLEANUP_INTERVAL_SECONDS=900
+CLEANUP_OLDER_THAN_SECONDS=86400
