--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     ports:
       - "8000:8000"
     environment:
-      REDIS_URL: ${REDIS_URL}
-      S3_ENDPOINT_URL: ${S3_ENDPOINT_URL}
+      REDIS_URL: redis://redis:6379/0
+      S3_ENDPOINT_URL: http://minio:9000
       S3_PUBLIC_ENDPOINT_URL: ${S3_PUBLIC_ENDPOINT_URL}
       S3_REGION: ${S3_REGION}
       S3_ACCESS_KEY: ${S3_ACCESS_KEY}
@@ -15,6 +15,17 @@ services:
       S3_SECURE: ${S3_SECURE}
       S3_ADDRESSING_STYLE: ${S3_ADDRESSING_STYLE}
       SIGNED_URL_TTL_SECONDS: ${SIGNED_URL_TTL_SECONDS}
+      MAX_IMAGE_BYTES: ${MAX_IMAGE_BYTES}
+      MAX_BATCH_FILES: ${MAX_BATCH_FILES}
+      MAX_IMAGE_PIXELS: ${MAX_IMAGE_PIXELS}
+      RATE_LIMIT_PER_MINUTE: ${RATE_LIMIT_PER_MINUTE}
+      JOB_RESULT_TTL_SECONDS: ${JOB_RESULT_TTL_SECONDS}
+      JOB_FAILURE_TTL_SECONDS: ${JOB_FAILURE_TTL_SECONDS}
+      JOB_RETRY_MAX: ${JOB_RETRY_MAX}
+      JOB_RETRY_INTERVALS: ${JOB_RETRY_INTERVALS}
+      CLEANUP_ENABLED: ${CLEANUP_ENABLED}
+      CLEANUP_INTERVAL_SECONDS: ${CLEANUP_INTERVAL_SECONDS}
+      CLEANUP_OLDER_THAN_SECONDS: ${CLEANUP_OLDER_THAN_SECONDS}
     volumes:
       - .:/app
     depends_on:
@@ -26,8 +37,8 @@ services:
     build: .
     command: python worker.py
     environment:
-      REDIS_URL: ${REDIS_URL}
-      S3_ENDPOINT_URL: ${S3_ENDPOINT_URL}
+      REDIS_URL: redis://redis:6379/0
+      S3_ENDPOINT_URL: http://minio:9000
       S3_PUBLIC_ENDPOINT_URL: ${S3_PUBLIC_ENDPOINT_URL}
       S3_REGION: ${S3_REGION}
       S3_ACCESS_KEY: ${S3_ACCESS_KEY}
@@ -36,6 +47,17 @@ services:
       S3_SECURE: ${S3_SECURE}
       S3_ADDRESSING_STYLE: ${S3_ADDRESSING_STYLE}
       SIGNED_URL_TTL_SECONDS: ${SIGNED_URL_TTL_SECONDS}
+      MAX_IMAGE_BYTES: ${MAX_IMAGE_BYTES}
+      MAX_BATCH_FILES: ${MAX_BATCH_FILES}
+      MAX_IMAGE_PIXELS: ${MAX_IMAGE_PIXELS}
+      RATE_LIMIT_PER_MINUTE: ${RATE_LIMIT_PER_MINUTE}
+      JOB_RESULT_TTL_SECONDS: ${JOB_RESULT_TTL_SECONDS}
+      JOB_FAILURE_TTL_SECONDS: ${JOB_FAILURE_TTL_SECONDS}
+      JOB_RETRY_MAX: ${JOB_RETRY_MAX}
+      JOB_RETRY_INTERVALS: ${JOB_RETRY_INTERVALS}
+      CLEANUP_ENABLED: ${CLEANUP_ENABLED}
+      CLEANUP_INTERVAL_SECONDS: ${CLEANUP_INTERVAL_SECONDS}
+      CLEANUP_OLDER_THAN_SECONDS: ${CLEANUP_OLDER_THAN_SECONDS}
     volumes:
       - .:/app
     depends_on:
