--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,23 +6,18 @@ on:
   pull_request:
 
 jobs:
-  test:
+  unit:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Run tests
+      - name: Run unit tests
         env:
           REDIS_URL: redis://localhost:6379/0
           S3_ENDPOINT_URL: http://localhost:9000
@@ -33,4 +28,39 @@ jobs:
           S3_BUCKET: rmbg-assets
           S3_SECURE: 'false'
           S3_ADDRESSING_STYLE: path
-        run: pytest -q
+        run: python -m pytest -q
+
+  integration:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Create smoke image
+        run: |
+          python - <<'PY'
+import base64
+png_b64 = (
+    "iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAIAAABLbSncAAAAFUlEQVR4nGP8//8/AzbAhFV00EoAAFbUAw037MyjAAAAAElFTkSuQmCC"
+)
+with open("/tmp/rmbg_ci_smoke.png", "wb") as f:
+    f.write(base64.b64decode(png_b64))
+PY
+      - name: Start stack
+        run: docker compose --env-file .env.ci up --build -d
+      - name: Wait for health
+        run: |
+          for i in {1..60}; do
+            curl -fsS http://127.0.0.1:8000/api/health && exit 0
+            sleep 2
+          done
+          exit 1
+      - name: Run integration smoke
+        run: ./tests/integration_smoke.sh
+      - name: Dump logs on failure
+        if: failure()
+        run: docker compose logs --no-color --tail=200
+      - name: Stop stack
+        if: always()
+        run: docker compose down -v
