--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,9 @@ services:
       CLEANUP_ENABLED: ${CLEANUP_ENABLED}
       CLEANUP_INTERVAL_SECONDS: ${CLEANUP_INTERVAL_SECONDS}
       CLEANUP_OLDER_THAN_SECONDS: ${CLEANUP_OLDER_THAN_SECONDS}
+      CLEANUP_PREFIXES: ${CLEANUP_PREFIXES}
+      APP_PROFILE: ${APP_PROFILE}
+      WORKER_CONCURRENCY: ${WORKER_CONCURRENCY}
     volumes:
       - .:/app
     depends_on:
@@ -58,6 +61,9 @@ services:
       CLEANUP_ENABLED: ${CLEANUP_ENABLED}
       CLEANUP_INTERVAL_SECONDS: ${CLEANUP_INTERVAL_SECONDS}
       CLEANUP_OLDER_THAN_SECONDS: ${CLEANUP_OLDER_THAN_SECONDS}
+      CLEANUP_PREFIXES: ${CLEANUP_PREFIXES}
+      APP_PROFILE: ${APP_PROFILE}
+      WORKER_CONCURRENCY: ${WORKER_CONCURRENCY}
     volumes:
       - .:/app
     depends_on:
@@ -84,5 +90,33 @@ services:
       - minio-data:/data
     restart: unless-stopped
 
+  prometheus:
+    image: prom/prometheus:v2.54.1
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+    volumes:
+      - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    ports:
+      - "9090:9090"
+    depends_on:
+      - web
+    profiles:
+      - monitoring
+    restart: unless-stopped
+
+  grafana:
+    image: grafana/grafana:11.2.2
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./monitoring/grafana/provisioning:/etc/grafana/provisioning:ro
+      - grafana-data:/var/lib/grafana
+    depends_on:
+      - prometheus
+    profiles:
+      - monitoring
+    restart: unless-stopped
+
 volumes:
   minio-data:
+  grafana-data:
